# vision

./: .envrc  .gitignore  README.md  config.example.yaml  flake.nix  pyproject.toml  style-transfer.example.yaml
src/vision/: __init__.py  cli.py
src/vision/config/: __init__.py  models.py
src/vision/pipelines/: __init__.py  base.py  builtin.py  registry.py  style_transfer.py
tests/: __init__.py  test_config.py
